kubernetes/board-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: board-app
spec:
  containers:
  - name: board-app
    image: 598552988151.dkr.ecr.ap-northeast-1.amazonaws.com/board:1.0
    ports:
    - containerPort: 8080
    resources:
      limits:
        memory: "128Mi"
        cpu: "100m"
